Se agregó una Red Neuronal para clasificación de imágenes de dígitos entre el 0 y 9 con una configuración similar a una RN creada usando Numpy, pero esta vez en su lugar, se ocuparon las librerías de TensorFlow y Keras para configurarla

--- a/Dense_NN.ipynb
+++ b/Dense_NN.ipynb
@@ -248,11 +248,7 @@
         "    Dense(n, activation='sigmoid', input_shape=(784,)),\n",
         "    Dense(classes, activation='sigmoid')\n",
         "])\n",
-        "# El modelo es secuencial, se van uniendo neurona por neurona de forma consecutiva\n",
-        "\n",
-        "model.add(Dense(n, activation='sigmoid', input_shape=(784,)))\n",
-        "model.add(Dense(classes, activation='sigmoid'))\n",
-        "model.summary()"
+        "# El modelo es secuencial, se van uniendo neurona por neurona de forma consecutiva"
       ]
     },
     {
